<resources>
    <string name="app_name">ActivityLabeling</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="title_activity_editor">ActivityEditor</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="micro_location">Micro-location</string>
    <string name="activity_type">Activity Type</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="duration">Duration</string>

    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string-array name="microlocations_array">
        <item>Select a microlocation</item>>
        <item>Office</item>
        <item>Lab</item>
        <item>Classroom</item>
        <item>Kitchen</item>
        <item>Bedroom</item>
        <item>Living Room</item>
    </string-array>

    <string-array name="activityTypes_array">
        <item>Select an activity type</item>
        <item>Cooking</item>
        <item>Eating</item>
        <item>Laundry</item>
        <item>Lecture/Talk</item>
        <item>Movie</item>
        <item>Reading on paper</item>
        <item>Shopping</item>
        <item>Traveling</item>
        <item>Workout</item>
        <item>Writing on paper</item>
    </string-array>


    <!-- Google Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="detected_activities_title">Detected Activities</string>
    <string name="start_location_and_activity_service">Start location and activity service</string>
    <string name="stop_location_and_activity_service">Stop location and activity service</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="location_update_settings">Location Update Settings</string>
    <string name="update_interval_s">Update Interval (sec)</string>
    <string name="minimum_displacement_m">Minimum Displacement (m)</string>
    <string name="activity_detection_settings">Activity Detection Settings</string>
    <string name="detection_interval_s">Detection Interval (sec)</string>
    <string name="title_activity_debug">Debug View</string>

</resources>
