<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ucla.nesl.ActivityLabeling.SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            android:text="@string/location_update_settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update_interval_s"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/LocationUpdateIntervalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/minimum_displacement_m"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/LocationMinimumDisplacementEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/LocationNotificationSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            android:text="@string/activity_detection_settings"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detection_interval_s"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ActivityDetectionIntervalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/ActivityNotificationSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/SettingsSaveBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/SettingsCancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
