<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ucla.nesl.ActivityLabeling.ActivityEditor"
    tools:showIn="@layout/activity_editor">

    <TextView
        android:id="@+id/StartTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/StartTimeValTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/font_size"
        app:layout_constraintLeft_toRightOf="@id/StartTimeTv"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/LocTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/StartTimeTv" />
    <TextView
        android:id="@+id/LocValTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/font_size"
        app:layout_constraintLeft_toRightOf="@id/LocTv"
        app:layout_constraintTop_toBottomOf="@id/StartTimeTv"/>

    <TextView
        android:id="@+id/MicrolocTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/micro_location"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LocTv" />

    <Spinner
        android:id="@+id/MicrolocsSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/MicrolocTv"
        app:layout_constraintTop_toBottomOf="@id/LocTv" />


    <TextView
        android:id="@+id/ActivityTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_type"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MicrolocTv" />

    <Spinner
        android:id="@+id/ActivityTypesSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/ActivityTypeTv"

        app:layout_constraintTop_toBottomOf="@id/MicrolocTv" />

    <TextView
        android:id="@+id/DescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ActivityTypeTv" />

    <EditText
        android:id="@+id/DescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/font_size"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DescriptionTv" />

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DescriptionET" />


</android.support.constraint.ConstraintLayout>